--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "test:unit": "vitest --environment jsdom --root src/"
   },
   "dependencies": {
+    "axios": "^1.2.0",
+    "element-plus": "^2.2.22",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
   },
