--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@vitejs/plugin-vue": "^3.1.2",
     "@vue/test-utils": "^2.1.0",
     "jsdom": "^20.0.1",
+    "sass": "^1.56.1",
+    "sass-loader": "^13.2.0",
     "vite": "^3.1.8",
     "vitest": "^0.24.3"
   }
