--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.2.0",
     "element-plus": "^2.2.22",
     "vue": "^3.2.41",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.2",
